# FearlessFlyer-CV

./: .gitignore  CMakeLists.txt  FF-CV  README.md  Release_build.sh
docs/: conceptMain.txt
modules/network/install/: nginxSetup.sh
modules/network/src/: NetConf.cpp
network/: CMakeLists.txt
network/install/: nginxSetup.sh
network/src/: Example.cpp  NetConf.cpp  NetConf.hpp  framesBuffer.cpp
scripts/: Debug_build.sh  OpenCV_installer.sh  Release_build.sh  StitchingRoutineStudies.py  boostlib_install.sh  imgui.ini
src/: CMakeLists.txt  Console.cpp  Console.hpp  Main.cpp  Main.hpp  Test.cpp  imguiExample.cpp  main.cpp
src/libs/: buffers.hpp
src/libs/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/libs/p2b/: bitmap.cpp
src/modules/: BlockingQueue.hpp  StateBoard.hpp
src/modules/Canvas/: Canvas.cpp  Canvas.hpp
src/modules/Console/: Console.hpp
src/modules/GUI/: GUI_demo.cpp
src/modules/Network/: Net_demo.cpp
src/modules/Threading/: CaptureThread.cpp  CaptureThread.hpp  PathfinderThread.hpp  RecognizerThread.hpp  StitcherThread.cpp  StitcherThread.hpp  Threading_demo.cpp  Threading_demo.cpp_OFF
src/modules/network/: NetConf.hpp
src/modules/network/src/: Example.cpp
src/network/src/: Example.cpp  NetConf.cpp  NetConf.hpp
src/src/: main.cpp
